<resources>
    <string name="app_name">CurrencyConvertor</string>
    <string name="Select_Country">Select Country</string>
    <string name="to">To</string>
    <string name="From">From</string>
    <string name="currency_convertor">Currency Convertor</string>
    <string name="amrican_dollar">Amrican Dollar</string>
    <string name="amount">amount</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="converted_amount">Converted amount</string>
    <string name="egyption_pound">Egyption Pound</string>
    <string name="_0_0">0.0</string>
    <string name="quantity">Quantity</string>
</resources>